<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.programmatology.ask</groupId>
  <artifactId>thelisteners</artifactId>
  <packaging>jar</packaging>
  <version>3.1.0</version>
  <name>The Listeners</name>
  <description>clean new Eclipse-based Maven project for The Listeners	</description>
  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Alexa Skills Kit</name>
      <email>ask-sdk-java@amazon.com</email>
      <organization>Alexa</organization>
      <organizationUrl>http://developer.amazon.com/ask</organizationUrl>
    </developer>
    <developer>
      <name>John Cayley</name>
      <email>cayley@shadoof.net</email>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/amzn/alexa-skills-kit-java.git</connection>
    <developerConnection>scm:git:https://github.com/amzn/alexa-skills-kit-java.git</developerConnection>
    <url>https://github.com/amzn/alexa-skills-kit-java.git</url>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.amazon.alexa</groupId>
      <artifactId>ask-sdk</artifactId>
      <version>2.86.0</version>
      <exclusions>
        <!-- log4j-slf4j-impl:2.8.2 is incompatible with log4j-api:2.25.x -->
        <exclusion>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>rita</groupId>
      <artifactId>rita</artifactId>
      <version>1.1.35</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.20.0</version>
    </dependency>
    <dependency>
      <groupId>com.amazonaws</groupId>
      <artifactId>aws-lambda-java-log4j2</artifactId>
      <version>1.6.4</version>
    </dependency>
    <!-- slf4j-api: direct dep required since log4j-slf4j-impl is excluded from ask-sdk -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.36</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.11.4</version>
      <scope>test</scope>
    </dependency>
    <!-- SLF4J no-op binding for tests: avoids log4j-slf4j-impl:2.8.2 + log4j-api:2.25.x incompatibility -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>1.7.36</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
          <configuration>
            <release>25</release>
            <forceLegacyJavacApi>true</forceLegacyJavacApi>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>listeners.ListenersStreamHandler</mainClass>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>